# pyrevm

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  pyrevm.pyi
.github/workflows/: py.yml  release.yml  rust.yml
bench/snailtracer/: snailtracer.py
pytest/: test.py
src/: database.rs  empty_db_wrapper.rs  evm.rs  executor.rs  lib.rs  pystdout.rs  types.rs  utils.rs
src/types/: checkpoint.rs  evm_env.rs  execution_result.rs  info.rs  mod.rs  opts.rs
tests/: conftest.py  test_cancun.py  test_evm.py  utils.py
