[package]
name = "pyrevm"
version = "0.3.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
revm = { "version"="8.0.0", features=["ethersdb", "serde", "serde-json", "std"] }
revm-interpreter = "4.0.0"
tracing = "0.1.40"
pyo3 = { version = "0.19", features = ["extension-module"] }
ruint = { version = "1.12.1", features = ["pyo3"] }

# needed for ethersdb
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
