[project]
name = "pyrevm"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "pyrevm"
version = "0.2.7"  # Cargo.toml needs to be updated for releases
description = "Python bindings to rust evm (revm)"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
maturin = ">=1.5,<1.6"
pytest = "^7.1.3"  # TODO: move this to test dependencies

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.981"

[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"
