[project]
name = "pyrevm"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "pyrevm"
version = "0.3.3"  # Cargo.toml needs to be updated for releases
description = "Python bindings to rust evm (revm)"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Dani Popes", "Daniel Schiavini", "Charles Cooper"]

[tool.poetry.dependencies]
python = ">=3.8"
maturin = "1.5.1"

[tool.poetry.dev-dependencies]
black = "24.4.0"
mypy = "1.9.0"
pytest = "8.1.1"

[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"
